--- a/src/rentalMobil/view/ViewMenu.form
+++ b/src/rentalMobil/view/ViewMenu.form
@@ -120,7 +120,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="sewa">
           <Properties>
-            <Property name="text" type="java.lang.String" value="SEWA"/>
+            <Property name="text" type="java.lang.String" value="Sewa"/>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="sewaMouseClicked"/>
