--- a/src/rentalMobil/view/ViewFormPengembalian.form
+++ b/src/rentalMobil/view/ViewFormPengembalian.form
@@ -269,6 +269,9 @@
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="d1" green="de" red="c2" type="rgb"/>
                 </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="0" green="0" red="0" type="rgb"/>
+                </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="9" rowCount="30">
                     <Column editable="true" title="ID-Transaksi" type="java.lang.Object"/>
